docs(readme): intial documentation for bs2202librarysystem
updated readme to include development information such as software and frameworks used. how to run the application locally and troubleshooting issues that might occur. minor formatting for header levels in readme.